<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.exercise.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtExerciseTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="{exercise_title}"
                android:textColor="@color/ActiveWorkoutColorSecondaryText"
                android:textSize="22sp"
                android:transitionName="txtExerciseTitle"/>

            <TextView
                android:id="@+id/txtExerciseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment" />
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/list_divider_h"
            android:contentDescription="@string/divider"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgMuscles"
                android:layout_width="@dimen/list_item_height"
                android:layout_height="wrap_content"
                android:contentDescription="@string/musclemap"
                android:padding="8dp"
                android:src="@mipmap/ic_launcher"
                android:transitionName="imgMuscles" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/muscles"
                android:textColor="@color/ActiveWorkoutColorPrimary" />

            <TextView
                android:id="@+id/txtMuscles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="{muscles}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/equipment"
                android:textColor="@color/ActiveWorkoutColorPrimary" />

            <TextView
                android:id="@+id/txtEquipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="{equipment}" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgExercise1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/musclemap"
            android:padding="16dp"
            android:src="@mipmap/ic_launcher"
            android:transitionName="exerciseImage"
            android:maxHeight="260px" />

        <ImageView
            android:id="@+id/imgExercise2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:contentDescription="@string/musclemap"
            android:padding="16dp"
            android:src="@mipmap/ic_launcher"
            android:transitionName="exerciseImage"
            android:maxHeight="260px" />


    </LinearLayout>
</LinearLayout>
