<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.routine.add.AddTitleFragment"
    android:background="?attr/colorAccent">

    <Button
        android:id="@+id/buttonNext"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="24dp"
        android:text="@string/next"
        android:textColor="@color/colorPrimaryLightText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonNext"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="50dp"
            android:textColorHint="@color/colorPrimaryLightText">

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryLightText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_below="@+id/input_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/colorPrimaryLightText">

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:hint="@string/description"
                android:layout_below="@+id/input_layout"
                android:layout_alignStart="@+id/input_layout"
                android:layout_alignEnd="@+id/input_layout"
                android:layout_marginTop="24dp"
                android:textColor="@color/colorPrimaryLightText" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


</RelativeLayout>
